# subjson

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bench.cc  subdoc-bench.cc
contrib/jsonsl/: jsonsl.c  jsonsl.h
jsondata/: brewery_5k.json
src/: operations.c  operations.h  path.c  subdoc-api.h
subdoc/: hkesc.h  jsonsl_header.h  loc.h  match.c  match.cc  match.h  operations.c  operations.cc  operations.h  path.c  path.cc  path.h  subdoc-api.h  subdoc-c.h  subdoc-util.h  uescape.h  util.cc  util.h  validate.h
tests/: CMakeLists.txt  big_json.inc.h  subdoc-tests-common.cc  subdoc-tests-common.h  t_match.cc  t_ops.cc  t_path.cc  t_uescape.cc  t_validate.cc
